<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context=".ui.login.RegisterActivity">

    <ImageView
        android:src="@drawable/profile"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/img_profile"/>




    <EditText
        android:id="@+id/email"
        android:hint="@string/prompt_email"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:singleLine="true"/>


    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="Nom"
        android:singleLine="true"/>




    <Button
        android:id="@+id/signup"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"/>



</LinearLayout>