<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_photo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/book0"/>

    <LinearLayout
        android:id="@+id/ll_user_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@id/iv_photo_login"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>

        <ImageView
            android:id="@+id/iv_icon_userDelete"
            android:layout_width="36dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/delete"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pwd_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@id/ll_user_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/pwd"
            android:scaleType="fitXY"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

        <ImageView
            android:id="@+id/iv_icon_pwdDelete"
            android:layout_width="36dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/delete"
            android:visibility="invisible"/>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_pwd_login"
        android:layout_marginTop="70dp"
        android:enabled="false"
        android:text="@string/action_sign_in"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"/>
</RelativeLayout>